<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EcoAgua</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="abrh">Conheça a Associação Brasileira de Recursos Hídricos: http://www.abrh.org.br/</string>
		
    <!-- activity_login -->
    <string name="login_name">Login</string>
    <string name="login_senha">Senha</string>
    <string name="login_cadastrese">Cadastre-se</string>
    <string name="login_esqueceu">Esqueceu a senha?</string>
    <string name="login_entrar">Entrar</string>

    <!-- activity_cadastro_morador -->
    <string name="s_morador_nome">Nome completo</string>
    <string name="s_morador_senha1">Senha</string>
    <string name="s_morador_senha2">Repetir senha</string>
    <string name="s_morador_predio">Nome do prédio</string>
    <string name="s_morador_ap">Apartamento</string>
    <string name="s_morador_btn_cadastrar">Cadastrar</string>

    <!-- activity_cadastro_predio -->
    <string name="s_predio_telefone">Telefone</string>
    <string name="s_predio_email">E-mail</string>
    <string name="s_predio_estado">Estado</string>
    <string name="s_predio_cidade">Cidade</string>
    <string name="s_predio_bairro">Bairro</string>
    <string name="s_predio_rua">Rua</string>
    <string name="s_predio_numero">Número</string>
    <string name="s_predio_cep">CEP</string>
    
    <!-- activity_perfil -->
    <string name="s_perfil_predio_sair">Sair</string>
    <string name="s_perfil_predio_cadastrar">Cadastrar morador</string>
    <string name="s_perfil_medicao">Medição:</string>
    <string name="s_perfil_medicao_cadastrar">Cadastrar</string>
    
    <!-- activity_ranking -->
    <string name="s_ranking">Ranking</string>
    <string name="s_ranking_posicao">Posição</string>
    <string name="s_ranking_nome">Nome</string>
    <string name="s_ranking_gastos">Gastos (L)</string>
	
    <!-- activity_notificacao -->
    <string name="s_notificacao">Notificacões</string>
    
    <!-- activity_estatisticas -->
    <string name="s_estatisticas">Gráficos do consumo de água</string>
    <string name="s_estatisticas_gacude">Gráfico do açude de Boqueirão (últimos anos)</string>
    <string name="s_estatisticas_gacude_atual">Gráfico do açude de Boqueirão (ano atual)</string>
    <string name="s_estatisticas_mensal">Mensal</string>
    <string name="s_estatisticas_semanal">Semanal</string>
    <string name="s_estatisticas_acude_volume">Volume (%)</string>
    <string name="s_estatisticas_acude_volume_atual">Volume (L)</string>
    <string name="s_estatisticas_previsao">Previsão</string>
    <string name="s_estatisticas_tempo">Data: </string>
</resources>