<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/predio_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_morador_predio" 
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tf_predio_nome"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/predio_senha1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_morador_senha1" 
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tf_predio_senha1"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/predio_senha2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_morador_senha2"
                android:textSize="16sp"
                android:layout_marginTop="5dp" />

            <EditText
                android:id="@+id/tf_predio_senha2"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/predio_telefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_predio_telefone" 
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tf_predio_telefone"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/predio_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_predio_email" 
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tf_predio_email"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/predio_estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_predio_estado" 
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tf_predio_estado"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/predio_cidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_predio_cidade" 
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tf_predio_cidade"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/predio_bairro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_predio_bairro"
                android:textSize="16sp" 
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tf_predio_bairro"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/predio_rua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_predio_rua"
                android:textSize="16sp" 
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tf_predio_rua"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/predio_numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_predio_numero" 
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tf_predio_numero"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/predio_cep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_predio_cep" 
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/tf_predio_cep"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" 
                />

            <Button
                android:id="@+id/btn_cadastrar_predio"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_login"
                android:text="@string/s_morador_btn_cadastrar" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
