<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/subBackground"
        android:orientation="vertical" 
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gráficos"
            android:textSize="20sp" 
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/barra" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/branco"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/s_estatisticas"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btn_grafico_semanal"
                android:layout_width="128dp"
                android:layout_height="38dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/botao"
                android:text="@string/s_estatisticas_semanal" />

            <Button
                android:id="@+id/btn_grafico_mensal"
                android:layout_width="128dp"
                android:layout_height="38dp"
                android:background="@drawable/botao"
                android:text="@string/s_estatisticas_mensal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/branco"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/s_estatisticas_gacude"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btn_grafico_acude_volume"
                android:layout_width="128dp"
                android:layout_height="38dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/botao"
                android:text="@string/s_estatisticas_acude_volume" />

            <Button
                android:id="@+id/btn_grafico_acude_volume_atual"
                android:layout_width="128dp"
                android:layout_height="38dp"
                android:background="@drawable/botao"
                android:text="@string/s_estatisticas_acude_volume_atual" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>