<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/login_campo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/login_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_login"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/login_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_senha"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_senha"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_opcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/login_text_cadastrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_cadastrese"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:src="@drawable/opcoes" />

            <TextView
                android:id="@+id/login_text_esqueceu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_esqueceu"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="240dp"
            android:layout_height="2dp"
            android:src="@drawable/barra" 
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_login"
            android:text="@string/login_entrar"
            android:layout_gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:autoLink="web"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/abrh"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/loginLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#CC000000"
        android:clickable="true" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>